--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "prestart": "yarn run script:download-data",
+    "prebuild": "yarn run script:download-data",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "script": "node -r dotenv/config -r tsconfig-paths/register -r ts-node/register scripts/",
+    "script:download-data": "yarn run script ./scripts/download-storybook-data.ts"
   },
   "dependencies": {
     "@acid-info/logos-docusaurus-preset": "^1.0.0-alpha.102",
@@ -33,6 +37,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "browserslist": {
