--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 
 # Misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -26,3 +25,5 @@ yalc.lock
 static/search-index.json
  
 notionExportedFiles/*/
+
+data/
