--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-STORYBOOK_URL=https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/
+STORYBOOK_URL=https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com
